ingress-sample.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/auth-signin: https://cluster-auth.example.com/start?return=https://$host$request_uri$is_args$args
      nginx.ingress.kubernetes.io/auth-url: https://cluster-auth.example.com/auth
      nginx.ingress.kubernetes.io/configuration-snippet: |
        auth_request_set $token $upstream_http_authorization;
        proxy_set_header Authorization $token;
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    generation: 1
    name: kubernetes-dashboard
    namespace: kube-system
  spec:
    rules:
    - host: dashboard.example.com
      http:
        paths:
        - backend:
            serviceName: kubernetes-dashboard
            servicePort: 443
          path: /
